style: :lipstick: Navbar is fixed at the top, padding-top added to the body to avoid overlapped content

--- a/client/src/sass/_elements.scss
+++ b/client/src/sass/_elements.scss
@@ -3,6 +3,7 @@
 body {
   font-family: "Nunito", sans-serif;
   background-image: linear-gradient(90deg, #a1c4fd 10%, #c2e9fb 90%);
+  padding-top: 81px;
 }
 
 .image-carousel {
